added timeout env variable, also needs to be set on railways to prevent timeout when calling e.g. open ai models with larger pdf document. Secondly, in the frontend only models are shown that fit the provider.

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ AILA_API_FAST_API_HOST=localhost
 # Deployment Environment  
 # Options: development, staging, production
 AILA_ENVIRONMENT=development
+
+# Frontend
+# Timeout for browser requests to the API (ms)
+# Increase if analyses with larger PDFs take longer in staging/production
+AILA_FRONTEND_REQUEST_TIMEOUT_MS=120000
