--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pydantic = "^2.6.0"
 python-dotenv = "^1.0.0"
 requests = "^2.31.0"
 tiktoken = "^0.11.0"
+pymupdf = "^1.26.3"
 
 [tool.poetry.group.api.dependencies]
 fastapi = "^0.115.0"
